vpc/internet_gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "main-igw-${var.enviroment}"
  }
}
